Folder structure and basic configuration

--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,25 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "app-config.json",
+                "input": "src/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/config",
+                "output": "config"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets"
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/fonts.scss"
             ],
             "scripts": []
           },
@@ -88,10 +103,25 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "app-config.json",
+                "input": "src/"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/config",
+                "output": "config"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets"
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/fonts.scss"
             ],
             "scripts": []
           }
