--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "baseUrl": "src", // Ensures paths are relative to 'src'
+    "paths": {
+      "@core/*": ["app/core/*"] // Alias for core folder
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
