--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:tailwind": "tailwindcss -i ./src/styles/styles.scss -o ./src/styles/output.scss --watch",
+    "build:tailwind": "tailwindcss -i ./src/styles/styles.scss -o ./src/styles/output.scss --minify",
+    "dev": "concurrently \"npm run dev:tailwind\" \"ng serve --host 0.0.0.0 --disable-host-check --poll 2000\""
   },
   "private": true,
   "dependencies": {
@@ -29,13 +32,15 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
