--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "dev:tailwind": "tailwindcss -i ./src/styles/styles.scss -o ./src/styles/output.scss --watch",
     "build:tailwind": "tailwindcss -i ./src/styles/styles.scss -o ./src/styles/output.scss --minify",
-    "dev": "concurrently \"npm run dev:tailwind\" \"ng serve --host 0.0.0.0 --disable-host-check --poll 2000\""
+    "dev": "ng serve --host 0.0.0.0 --disable-host-check --poll 2000"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +32,6 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.1.2",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
