--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "aws-amplify": "^6.12.2",
     "psi-frontend": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
